--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,12 +18,14 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Grant execute permissions for Gradle
+        run: chmod +x ./gradlew
+
       - name: Build APK
-        run: |
-          ./gradlew assembleDebug
+        run: ./gradlew assembleDebug
 
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: Android APK
           path: app/build/outputs/apk/debug/app-debug.apk
