--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,3 +29,35 @@ jobs:
         with:
           name: Android APK
           path: app/build/outputs/apk/debug/app-debug.apk
+          name: Build Android APK
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Grant execute permissions for Gradle
+        run: chmod +x ./gradlew
+
+      - name: Build APK
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Android APK
+          path: app/build/outputs/apk/debug/app-debug.apk
+
